--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 body {
     font-family: 'Space Grotesk', sans-serif;
-    background-color: #7F7A7C;
+    background-color: #78706C;
     color: black;
     height: 100vh;
     display: flex;
